[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["duanluan <duanluan@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "main", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<=3.13"
pyyaml = "^6.0.2"
py7zr = "^0.22.0"
apscheduler = "^3.11.0"
pyinstaller = "^6.13.0"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "main.setup:main"
